--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-security.user.name=admin
-security.user.password=pass
-security.user.role=ADMIN
+#security.user.name=admin
+#security.user.password=pass
+#security.user.role=ADMIN
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/quiz_bank
-spring.datasource.username=Justin
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/quiz_bank
+#spring.datasource.username=Justin
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.generate-ddl=true
