Created repos for all data need, added some password hashing, added some dummy data for dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.generate-ddl=true
+
+spring.data.rest.base-path=/api
