ready to roll out

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #security.user.password=pass
 #security.user.role=ADMIN
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/quiz_bank
+#spring.datasource.url=jdbc:postgresql://localhost:5432/quiz
 #spring.datasource.username=Justin
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
